handling db loose connection + split health
